Issues fixed
